<resources>
    <string name="app_name">Iwallet</string>
    <string name="sup_welcome">Welcome!</string>
    <string name="sup_message">New User? Please sign up below</string>
    <string name="sup_username">Username</string>
    <string name="sup_email">Email</string>
    <string name="sup_passw">Password</string>
    <string name="sup_cpassw">Confirm Password</string>
    <string name="sup_message2">Already a member?</string>
    <string name="sup_message3">Skip straight to the</string>
    <string name="sup_message4">Login menu</string>
    <string name="sup_or">OR</string>
    <string name="login_welc">Welcome Back User</string>
    <string name="login_plslog">Please Login Below</string>
    <string name="login_lbluser">UserName or Email Address</string>
    <string name="login_lblpass">Password</string>
    <string name="login_btnlog">Login</string>
    <string name="login_forgotuser">Forgot UserName?</string>
    <string name="login_forgotpass">Forgot Password?</string>
    <string name="login_userholder">egg@eggmail.com</string>
    <string name="login_passwholder">***********</string>
    <string name="userp">User Profile</string>
    <string name="cardinf">Card Info</string>
    <string name="security">Security</string>
    <string name="settings">Settings</string>
    <string name="mainhub_payment">Payment</string>
    <string name="mainhub_budget">Budget</string>
    <string name="mainhub_id">Identification</string>
    <string name="mainhub_scanrec">Scan Receipt</string>
    <string name="mainhub_storeinf">Store Info</string>
    <string name="mainhub_vouchers">Vouchers</string>
    <string name="mainhub_cardkey">Card Keys</string>
    <string name="mainhub_todo">Todo List</string>
    <string name="mainhub_impdates">Important Dates</string>
    <string name="bottomapp_txt1">iWallet bleh blah ipsum lorem ip</string>
    <string name="bottomapp_txt2">More ipsum blah bleh copyright</string>
    <string name="btn_submit">Submit</string>
    <string name="sec_inf1">Security Status</string>
    <string name="sec_inf2">not fully secured</string>
    <string name="sec_checkbox">secure check</string>
    <string name="sec_pass1">Password</string>
    <string name="sec_pass2">Unique Code</string>
    <string name="sec_fing">Biometric</string>
    <string name="sec_fingL">Registered Finger</string>
    <string name="sec_fingV">Last updated 28/11/2017</string>
    <string name="button_return">Return to hub</string>
    <string name="img_desc">Holder</string>
    <string name="prof_text1">Name:</string>
    <string name="prof_text2">Steve Jacob</string>
    <string name="prof_text3">Address:</string>
    <string name="prof_text4">123 Bothar Beag</string>
    <string name="prof_text5">Alt Contact:</string>
    <string name="prof_text6">088177188</string>
    <string name="prof_text7">DOB:</string>
    <string name="prof_text8">12/12/62</string>
    <string name="prof_button1">update info</string>
    <string name="prof_button2">Change picture</string>
    <string name="cardi_1">card number</string>
    <string name="cardi_2">expiry date</string>
    <string name="cardi_3">ccv number</string>
    <string name="cardi_num">card ending 1234</string>
    <string name="cardi_exp">08/20</string>
    <string name="cardi_ccv">777</string>
    <string name="cardi_button1">Edit/Add new card</string>
    <string name="setting_autolog">Auto Logout after:</string>
    <string name="setting_background">choose background</string>
    <string name="setting_button_lang">Select Language</string>
    <string name="setting_button_backg">Choose Background</string>
    <string name="setting_button_autl">Select Auto logout time</string>
    <string name="setting_button_save">Save Changes</string>
    <string name="setting_language">Select Language</string>
    <string name="reg_text1">Name:</string>
    <string name="reg_text2">DOB:</string>
    <string name="reg_text3">Location:</string>
    <string name="reg_text4">Card Number</string>
    <string name="reg_text5">Card Expiry</string>
    <string name="reg_text6">Card CCV</string>
    <string name="reg_text7">Password</string>
    <string name="reg_text8">Confirm Pass</string>
    <string name="reg_inp1">Jim Tom</string>
    <string name="reg_inp2">09/09/59</string>
    <string name="reg_inp3">Ireland</string>
    <string name="reg_inp4">231564897</string>
    <string name="reg_inp5">05/20</string>
    <string name="reg_inp6">626</string>
    <string name="reg_inp7">**********</string>
    <string name="reg_inp8">**********</string>
    <string name="reg_text">Please Fill out all Details</string>
</resources>
