<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_regform"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.evan.iwallet.RegformActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtVlogoReg" />

    <TextView
        android:text="@string/reg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVlogoReg"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtVregFormReg" />

    <TextView
        android:text="@string/reg_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVregFormReg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:id="@+id/txtReg1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/reg_inp1"
        android:ems="10"
        android:layout_alignTop="@+id/txtReg1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtInputReg1" />

    <TextView
        android:text="@string/reg_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputReg1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtReg2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/reg_inp2"
        android:ems="10"
        android:layout_below="@+id/txtInputReg1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtInputReg2" />

    <TextView
        android:text="@string/reg_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputReg2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtReg3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/reg_inp3"
        android:ems="10"
        android:id="@+id/txtInputReg3"
        android:layout_below="@+id/txtInputReg2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/reg_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputReg3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtReg4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/reg_inp4"
        android:ems="10"
        android:layout_below="@+id/txtInputReg3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtInputReg4" />

    <TextView
        android:text="@string/reg_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputReg4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtReg5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/reg_inp5"
        android:ems="10"
        android:layout_below="@+id/txtInputReg4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtInputReg5" />

    <TextView
        android:text="@string/reg_text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputReg5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtReg6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/reg_inp6"
        android:ems="10"
        android:layout_below="@+id/txtInputReg5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtInputReg6" />

    <TextView
        android:text="@string/reg_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputReg6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtReg7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_inp7"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/txtInputReg6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/pasInputReg1" />

    <TextView
        android:text="@string/reg_text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pasInputReg1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtReg8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_inp8"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/pasInputReg1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/pasInputReg2" />

    <Button
        android:text="@string/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pasInputReg2"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnSubmitReg" />

    <TextView
        android:text="@string/bottomapp_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtVfootReg" />
</RelativeLayout>
