<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cardinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.evan.iwallet.CardinfoActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/img_desc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imBtnProfileCar" />

    <TextView
        android:text="@string/cardinf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imBtnProfileCar"
        android:layout_toEndOf="@+id/imBtnProfileCar"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:id="@+id/txtVcardInfClickCar" />

    <TextView
        android:text="@string/security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0000ff"
        android:layout_alignTop="@+id/txtVcardInfClickCar"
        android:layout_toRightOf="@+id/txtVcardInfClickCar"
        android:layout_toEndOf="@+id/txtVcardInfClickCar"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/txtVsecurityClickCar" />

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0000ff"
        android:layout_alignTop="@+id/txtVsecurityClickCar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/txtVsettingsClickCar" />

    <TextView
        android:text="@string/userp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imBtnProfileCar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtVprofCar" />

    <Button
        android:text="@string/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVcardInfClickCar"
        android:layout_alignLeft="@+id/txtVcardInfClickCar"
        android:layout_alignStart="@+id/txtVcardInfClickCar"
        android:id="@+id/btnReturnCar"
        android:layout_alignRight="@+id/txtVsettingsClickCar"
        android:layout_alignEnd="@+id/txtVsettingsClickCar"
        android:layout_alignBottom="@+id/txtVprofCar" />

    <TextView
        android:text="@string/cardi_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVprofCar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:id="@+id/txtVcardInf1" />

    <TextView
        android:text="@string/cardi_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtVcardInf1"
        android:layout_alignLeft="@+id/btnReturnCar"
        android:layout_alignStart="@+id/btnReturnCar"
        android:id="@+id/txtVcardInfCardNo" />

    <TextView
        android:text="@string/cardi_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVcardInf1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:id="@+id/txtVcardInf2" />

    <TextView
        android:text="@string/cardi_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtVcardInf2"
        android:layout_alignLeft="@+id/txtVcardInfCardNo"
        android:layout_alignStart="@+id/txtVcardInfCardNo"
        android:id="@+id/txtVcrdInfExpD" />

    <TextView
        android:text="@string/cardi_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtVcardInf3" />

    <TextView
        android:text="@string/cardi_ccv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtVcardInf3"
        android:layout_alignLeft="@+id/txtVcrdInfExpD"
        android:layout_alignStart="@+id/txtVcrdInfExpD"
        android:id="@+id/txtVcrdInfCcv" />

    <Button
        android:text="@string/cardi_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVcrdInfCcv"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnCardInfAdd" />

    <TextView
        android:text="@string/bottomapp_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtVcardInfFoot2" />

    <TextView
        android:text="@string/bottomapp_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtVcardInfFoot2"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtVcardInfFoot1" />
</RelativeLayout>
